@@ -5,9 +5,10 @@ body {
 	margin:0 auto;
 }
 .block_container {position:relative; width:99%; padding:0px; margin:0px;}
-.block_motif {position:absolute; z-index:3; height:10px; top:0px; text-align:center; vertical-align:middle; background-color:#555555;}
-.block_id {position:absolute; z-index:5; font-size: 9px; top:0px;}
+.block_motif {position:absolute; z-index:5; height:9px; top:0px; text-align:center; vertical-align:middle; background-color:#555;}
+.block_id {position:absolute; z-index:10; font-size: 9px; top:0px;}
 .block_rule {position:absolute; z-index:2; width:100%; height:1px; top:12px; left:0px; background-color:grey;}
+.block_exon {position:absolute; z-index:4; height:7px; top:0px; text-align:center; vertical-align:middle; background-color:#ccc;}
 .monospace {font-family: "Courier", monospace; white-space: pre; display:block; line-height:14px; }
 .flank_triad {color: rgb(100, 100, 100); }
 .valid_triad {color: rgb(0, 175, 0); }
@@ -69,7 +70,7 @@ div.spacer {margin: 5px; float: left; width: 200px; }
 	font-size:12px;
 	height:70px;
 	width:160px;
-	padding:25px;
+	padding:40px 25px 10px 25px;
 	color:#fff;	
 }
 /* style the trigger elements */
