@@ -3,6 +3,7 @@
 *******************
 
 2013-03-29  Fabian Buske	v0.1.3
+	- visual guide for exon locations added to block view in target cluster overview
 	- bash shell compatibility improved
 	- script name conflict resolved
 	- default output processing set to serial mode 
